--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/swagger": "^7.1.12",
     "@prisma/client": "^5.3.1",
     "nestjs-zod": "^3.0.0",
     "reflect-metadata": "^0.1.13",
